
subproject ('avio_http_serve_files')
subproject ('avio_list_dir')
subproject ('avio_read_callback')
subproject ('decode_audio')
subproject ('decode_filter_audio')
subproject ('decode_filter_video')
subproject ('decode_video')
subproject ('demux_decode')
subproject ('encode_audio')
subproject ('encode_video')
subproject ('extract_mvs')
subproject ('filter_audio')
subproject ('hw_decode')
subproject ('mux')
subproject ('qsv_decode')
subproject ('qsv_transcode')
subproject ('remux')
subproject ('resample_audio')
subproject ('scale_video')
subproject ('show_metadata')
subproject ('transcode')
subproject ('transcode_aac')
subproject ('vaapi_encode')
subproject ('vaapi_transcode')
