srcs += files ([
    './mediacodec/MediaCodecContext.vapi',
    './mediacodec/MediaCodecBuffer.vapi',
    './dxva2/DirectXVideoAccelerationContext.vapi',
    './dxva2/DirectXVideoAccelerationWorkaroundFlags.vapi',
    './ac3_parser/ac3_parser.vapi',
    './adts_parser/adts_parser.vapi',
    './vdpau/VdpContext.vapi',
    './avdct/DCT.vapi',
    './avfft/FFTComplex.vapi',
    './avfft/RDFTransformType.vapi',
    './avfft/DCTTransformType.vapi',
    './avfft/DCTContext.vapi',
    './avfft/RDFTContext.vapi',
    './avfft/FFTContext.vapi',
    './vorbis_parser/VorbisFlags.vapi',
    './vorbis_parser/VorbisParseContext.vapi',
    './bytestream/bytestream.vapi',
    './qsv/QSVContext.vapi',
    './version/version.vapi',
    './dv_profile/DVProfile.vapi',
    './videotoolbox/VideoToolboxContext.vapi',
    './avcodec/SubtitleRect.vapi',
    './avcodec/BitStreamFilterContextOld.vapi',
    './avcodec/MpegEncContext.vapi',
    './avcodec/ProfileAAC.vapi',
    './avcodec/AudioServiceType.vapi',
    './avcodec/MacroBlockDecisionMode.vapi',
    './avcodec/CodecParserContext.vapi',
    './avcodec/Codec.vapi',
    './avcodec/CodecCapabilityFlags.vapi',
    './avcodec/BitStreamFilterList.vapi',
    './avcodec/ProfileSBC.vapi',
    './avcodec/CodecDefault.vapi',
    './avcodec/DebugMotionVectors.vapi',
    './avcodec/Discard.vapi',
    './avcodec/PacketFlags.vapi',
    './avcodec/ParserFlags.vapi',
    './avcodec/CodecHardwareConfigMethod.vapi',
    './avcodec/SubtitleTextFormatAssignment.vapi',
    './avcodec/ProfileType.vapi',
    './avcodec/SubtitleFlags.vapi',
    './avcodec/CodecFlags1.vapi',
    './avcodec/avcodec.vapi',
    './avcodec/InterlacedDCTComparison.vapi',
    './avcodec/CodecPropertyFlags2.vapi',
    './avcodec/DCTAlgorithm.vapi',
    './avcodec/HardwareAccelerationCodecCapabilityFlags.vapi',
    './avcodec/DebugFlags.vapi',
    './avcodec/SliceFlags.vapi',
    './avcodec/BitStreamFilter.vapi',
    './avcodec/ErrorRecognitionFlags.vapi',
    './avcodec/CodecContext.vapi',
    './avcodec/PacketSideData.vapi',
    './avcodec/CodecDescriptor.vapi',
    './avcodec/ProfileARIB.vapi',
    './avcodec/ProfileDNXH.vapi',
    './avcodec/HardwareAcceleration.vapi',
    './avcodec/BugWorkaroundFlags.vapi',
    './avcodec/DebugMVFlags.vapi',
    './avcodec/ProfileH264.vapi',
    './avcodec/Subtitle.vapi',
    './avcodec/CodecPropertyFlags1.vapi',
    './avcodec/CodecParameters.vapi',
    './avcodec/CodecID.vapi',
    './avcodec/SubtitleType.vapi',
    './avcodec/SideDataParamChangeFlags.vapi',
    './avcodec/BitStreamFilterContext.vapi',
    './avcodec/GetBufferFlags.vapi',
    './avcodec/ProfileAV1.vapi',
    './avcodec/ProfileMJPEG.vapi',
    './avcodec/CPBProperties.vapi',
    './avcodec/ProfileMPEG2.vapi',
    './avcodec/CodecFlags2.vapi',
    './avcodec/ProfileVP9.vapi',
    './avcodec/FieldOrder.vapi',
    './avcodec/HardwareAccelerationFlags.vapi',
    './avcodec/ThreadType.vapi',
    './avcodec/ProfileDTS.vapi',
    './avcodec/CodecHardwareConfig.vapi',
    './avcodec/PanScanArea.vapi',
    './avcodec/ProfileHEVC.vapi',
    './avcodec/ProfileProRes.vapi',
    './avcodec/Profile.vapi',
    './avcodec/IDCTAlgorithm.vapi',
    './avcodec/PacketSideDataType.vapi',
    './avcodec/SubtitleCharacterEncodingMode.vapi',
    './avcodec/CodecParser.vapi',
    './avcodec/ErrorConcealmentFlags.vapi',
    './avcodec/ProfileVC1.vapi',
    './avcodec/PictureStructure.vapi',
    './avcodec/StrictStandardsCompliance.vapi',
    './avcodec/Packet.vapi',
    './avcodec/ProfileMPEG4.vapi',
    './avcodec/ProfileJPEG2000.vapi',
    './avcodec/RcOverride.vapi',
    './jni/jni.vapi',
    './d3d11va/Direct3D11VideoAccelerationWorkaroundFlags.vapi',
    './d3d11va/Direct3D11VideoAccelerationContext.vapi',
    './dirac/DiracChromaFormat.vapi',
    './dirac/DiracSequenceHeader.vapi',
    './dirac/DiracVersionInfo.vapi',
    './dirac/DiracParseCodes.vapi'
])