srcs += files ([
    './v4l2-common.vapi',
    './decklink_common_c.vapi',
    './fbdev_common.vapi',
    './pulse_audio_common.vapi',
    './sndio.vapi',
    './version.vapi',
    './avdevice.vapi',
    './internal.vapi',
    './dshow_capture.vapi',
    './decklink_common.vapi',
    './opengl_enc_shaders.vapi',
    './oss.vapi',
    './timefilter.vapi',
    './decklink_dec.vapi',
    './alsa.vapi',
    './decklink_enc.vapi'
])