srcs += files ([
    './colorspacedsp.vapi',
    './af_volume.vapi',
    './dnn_interface.vapi',
    './unsharp.vapi',
    './colorspace.vapi',
    './vmaf_motion.vapi',
    './framesync.vapi',
    './ebur128.vapi',
    './framerate.vapi',
    './buffersink.vapi',
    './bufferqueue.vapi',
    './opencl_source.vapi',
    './gblur.vapi',
    './vidstabutils.vapi',
    './transpose.vapi',
    './dnn_backend_tf.vapi',
    './thread.vapi',
    './lavfutils.vapi',
    './dnn_backend_native.vapi',
    './scene_sad.vapi',
    './vf_overlay.vapi',
    './formats.vapi',
    './blend.vapi',
    './vf_hqdn3d.vapi',
    './scale.vapi',
    './deshake.vapi',
    './lswsutils.vapi',
    './hermite.vapi',
    './window_func.vapi',
    './generate_wave_table.vapi',
    './yadif.vapi',
    './gradfun.vapi',
    './version.vapi',
    './buffersrc.vapi',
    './hflip.vapi',
    './psnr.vapi',
    './motion_estimation.vapi',
    './signature.vapi',
    './vf_idet.vapi',
    './vf_pullup.vapi',
    './tinterlace.vapi',
    './internal.vapi',
    './avf_showcqt.vapi',
    './qsvvpp.vapi',
    './limiter.vapi',
    './af_afir.vapi',
    './boxblur.vapi',
    './audio.vapi',
    './transform.vapi',
    './maskedmerge.vapi',
    './vaapi_vpp.vapi',
    './af_anlmdndsp.vapi',
    './vf_noise.vapi',
    './removegrain.vapi',
    './framepool.vapi',
    './vf_nlmeans.vapi',
    './vf_eq.vapi',
    './avfilter.vapi',
    './bwdif.vapi',
    './filters.vapi',
    './framequeue.vapi',
    './drawutils.vapi',
    './video.vapi',
    './ssim.vapi',
    './w3fdif.vapi',
    './vf_pp7.vapi',
    './stereo3d.vapi',
    './vf_fspp.vapi',
    './threshold.vapi',
    './vf_spp.vapi',
    './bbox.vapi',
    './opencl.vapi'
])