
#include "libavutil/attributes.h"
#include "libavutil/avutil.h"
#include "libavutil/buffer.h"
#include "libavutil/dict.h"
#include "libavutil/frame.h"
#include "libavutil/log.h"
#include "libavutil/pixfmt.h"
#include "libavutil/rational.h"

srcs += files ([
    './Version.vapi',
    './avfilter/FilterPad.vapi',
    './avfilter/FilterContext.vapi',
    './avfilter/FilterThreadSliceFlags.vapi',
    './avfilter/FilterAutoConvertFlags.vapi',
    './avfilter/FilterCommandFlags.vapi',
    './avfilter/FilterGraphSegment.vapi',
    './avfilter/FilterLink.vapi',
    './avfilter/FilterFlags.vapi',
    './avfilter/FilterFormats.vapi',
    './avfilter/Filter.vapi',
    './avfilter/FilterInOut.vapi',
    './avfilter/FilterChain.vapi',
    './avfilter/FilterParams.vapi',
    './avfilter/FilterPadParams.vapi',
    './avfilter/FilterFormatsConfig.vapi',
    './avfilter/FilterGraph.vapi'
])