srcs += files ([
    './dtshddec/dtshddec-c.vapi',
    './epafdec/epafdec-c.vapi',
    './tee/tee-c.vapi',
    './shortendec/shortendec-c.vapi',
    './tls_libtls/tls_libtls-c.vapi',
    './amr/amr-c.vapi',
    './oma/oma.vapi',
    './gsmdec/gsmdec-c.vapi',
    './srtdec/srtdec-c.vapi',
    './wc3movie/wc3movie-c.vapi',
    './rtpproto/rtpproto.vapi',
    './rtpproto/rtpproto-c.vapi',
    './gdv/gdv-c.vapi',
    './dauddec/dauddec-c.vapi',
    './siff/siff-c.vapi',
    './supenc/supenc-c.vapi',
    './microdvdenc/microdvdenc-c.vapi',
    './framecrcenc/framecrcenc-c.vapi',
    './ads/ads-c.vapi',
    './aiffdec/aiffdec-c.vapi',
    './g726/g726-c.vapi',
    './rtspdec/rtspdec-c.vapi',
    './wsddec/wsddec-c.vapi',
    './wvedec/wvedec-c.vapi',
    './rtpdec_dv/rtpdec_dv-c.vapi',
    './svag/svag-c.vapi',
    './options/options-c.vapi',
    './g729dec/g729dec-c.vapi',
    './smjpegdec/smjpegdec-c.vapi',
    './lmlm4/lmlm4-c.vapi',
    './caf/caf.vapi',
    './ipmovie/ipmovie-c.vapi',
    './rtpdec/rtpdec.vapi',
    './rtpdec/rtpdec-c.vapi',
    './rtpdec_h261/rtpdec_h261-c.vapi',
    './rtmpproto/rtmpproto-c.vapi',
    './ftp/ftp-c.vapi',
    './concat/concat-c.vapi',
    './rtpenc_chain/rtpenc_chain.vapi',
    './dtsdec/dtsdec-c.vapi',
    './crypto/crypto-c.vapi',
    './oggparsecelt/oggparsecelt-c.vapi',
    './smoothstreamingenc/smoothstreamingenc-c.vapi',
    './hdsenc/hdsenc-c.vapi',
    './segafilm/segafilm-c.vapi',
    './aixdec/aixdec-c.vapi',
    './fifo_test/fifo_test-c.vapi',
    './sapenc/sapenc-c.vapi',
    './vocdec/vocdec-c.vapi',
    './rtsp/rtsp.vapi',
    './rtsp/rtsp-c.vapi',
    './rtpdec_ac3/rtpdec_ac3-c.vapi',
    './aadec/aadec-c.vapi',
    './icoenc/icoenc-c.vapi',
    './smush/smush-c.vapi',
    './rtpdec_jpeg/rtpdec_jpeg-c.vapi',
    './sierravmd/sierravmd-c.vapi',
    './lrcenc/lrcenc-c.vapi',
    './rtpdec_latm/rtpdec_latm-c.vapi',
    './yuv4mpegdec/yuv4mpegdec-c.vapi',
    './flvdec/flvdec-c.vapi',
    './vapoursynth/vapoursynth-c.vapi',
    './asfenc/asfenc-c.vapi',
    './tty/tty-c.vapi',
    './ape/ape-c.vapi',
    './bintext/bintext-c.vapi',
    './vocenc/vocenc-c.vapi',
    './icodec/icodec-c.vapi',
    './yuv4mpegenc/yuv4mpegenc-c.vapi',
    './psxstr/psxstr-c.vapi',
    './avr/avr-c.vapi',
    './lrcdec/lrcdec-c.vapi',
    './rtpdec_ilbc/rtpdec_ilbc-c.vapi',
    './mpeg/mpeg.vapi',
    './mpeg/mpeg-c.vapi',
    './flvenc/flvenc-c.vapi',
    './bit/bit-c.vapi',
    './redspark/redspark-c.vapi',
    './ncdec/ncdec-c.vapi',
    './img2_brender_pix/img2_brender_pix-c.vapi',
    './avi/avi.vapi',
    './pmpdec/pmpdec-c.vapi',
    './flv/flv.vapi',
    './cache/cache-c.vapi',
    './sapdec/sapdec-c.vapi',
    './msf/msf-c.vapi',
    './chromaprint/chromaprint-c.vapi',
    './stldec/stldec-c.vapi',
    './oggparseopus/oggparseopus-c.vapi',
    './xwma/xwma-c.vapi',
    './musx/musx-c.vapi',
    './aiffenc/aiffenc-c.vapi',
    './uncodedframecrcenc/uncodedframecrcenc-c.vapi',
    './smjpeg/smjpeg.vapi',
    './frmdec/frmdec-c.vapi',
    './avs/avs-c.vapi',
    './rtspenc/rtspenc-c.vapi',
    './eacdata/eacdata-c.vapi',
    './smjpegenc/smjpegenc-c.vapi',
    './aacdec/aacdec-c.vapi',
    './mpegts/mpegts.vapi',
    './mpegts/mpegts-c.vapi',
    './md5proto/md5proto-c.vapi',
    './apc/apc-c.vapi',
    './rtpdec_qdm2/rtpdec_qdm2-c.vapi',
    './subviewer1dec/subviewer1dec-c.vapi',
    './riff/riff.vapi',
    './asfcrypt/asfcrypt.vapi',
    './av1/av1.vapi',
    './rtpenc/rtpenc.vapi',
    './rtpenc/rtpenc-c.vapi',
    './lvfdec/lvfdec-c.vapi',
    './udp/udp-c.vapi',
    './tls_gnutls/tls_gnutls-c.vapi',
    './avformat/avformat.vapi',
    './audiointerleave/audiointerleave.vapi',
    './file/file-c.vapi',
    './srtenc/srtenc-c.vapi',
    './libsrt/libsrt-c.vapi',
    './cinedec/cinedec-c.vapi',
    './hevc/hevc.vapi',
    './daudenc/daudenc-c.vapi',
    './4xm/4xm-c.vapi',
    './bluray/bluray-c.vapi',
    './microdvddec/microdvddec-c.vapi',
    './supdec/supdec-c.vapi',
    './iss/iss-c.vapi',
    './dfa/dfa-c.vapi',
    './subfile/subfile-c.vapi',
    './qcp/qcp-c.vapi',
    './swfenc/swfenc-c.vapi',
    './sox/sox.vapi',
    './librtmp/librtmp-c.vapi',
    './realtextdec/realtextdec-c.vapi',
    './wvenc/wvenc-c.vapi',
    './sbcdec/sbcdec-c.vapi',
    './sccdec/sccdec-c.vapi',
    './avienc/avienc-c.vapi',
    './movenc/movenc.vapi',
    './movenc/movenc-c.vapi',
    './yuv4mpeg/yuv4mpeg.vapi',
    './tls_openssl/tls_openssl-c.vapi',
    './ircamenc/ircamenc-c.vapi',
    './os_support/os_support.vapi',
    './wavenc/wavenc-c.vapi',
    './msnwc_tcp/msnwc_tcp-c.vapi',
    './id3v2/id3v2.vapi',
    './urldecode/urldecode.vapi',
    './aiff/aiff.vapi',
    './latmenc/latmenc-c.vapi',
    './yop/yop-c.vapi',
    './oggparsevorbis/oggparsevorbis-c.vapi',
    './asfdec_o/asfdec_o-c.vapi',
    './webm_chunk/webm_chunk-c.vapi',
    './rso/rso.vapi',
    './ffmeta/ffmeta.vapi',
    './ffmetadec/ffmetadec-c.vapi',
    './oggparsespeex/oggparsespeex-c.vapi',
    './s337m/s337m-c.vapi',
    './vplayerdec/vplayerdec-c.vapi',
    './smacker/smacker-c.vapi',
    './wtvenc/wtvenc-c.vapi',
    './libgme/libgme-c.vapi',
    './rtpdec_asf/rtpdec_asf-c.vapi',
    './sbgdec/sbgdec-c.vapi',
    './soxdec/soxdec-c.vapi',
    './astenc/astenc-c.vapi',
    './asfdec_f/asfdec_f-c.vapi',
    './segment/segment-c.vapi',
    './network/network.vapi',
    './nistspheredec/nistspheredec-c.vapi',
    './webvttenc/webvttenc-c.vapi',
    './mtaf/mtaf-c.vapi',
    './async/async-c.vapi',
    './vividas/vividas-c.vapi',
    './dhav/dhav-c.vapi',
    './pva/pva-c.vapi',
    './sol/sol-c.vapi',
    './mkvtimestamp_v2/mkvtimestamp_v2-c.vapi',
    './nsvdec/nsvdec-c.vapi',
    './nuv/nuv-c.vapi',
    './mlvdec/mlvdec-c.vapi',
    './xmv/xmv-c.vapi',
    './mgsts/mgsts-c.vapi',
    './avlanguage/avlanguage.vapi',
    './internal/internal.vapi',
    './tedcaptionsdec/tedcaptionsdec-c.vapi',
    './webvttdec/webvttdec-c.vapi',
    './fsb/fsb-c.vapi',
    './thp/thp-c.vapi',
    './libmodplug/libmodplug-c.vapi',
    './mpegtsenc/mpegtsenc-c.vapi',
    './westwood_aud/westwood_aud-c.vapi',
    './vag/vag-c.vapi',
    './hashenc/hashenc-c.vapi',
    './loasdec/loasdec-c.vapi',
    './wv/wv.vapi',
    './hcom/hcom-c.vapi',
    './ffmetaenc/ffmetaenc-c.vapi',
    './ty/ty-c.vapi',
    './tee_common/tee_common.vapi',
    './iff/iff-c.vapi',
    './3dostr/3dostr-c.vapi',
    './soxenc/soxenc-c.vapi',
    './oggparsedaala/oggparsedaala-c.vapi',
    './wtvdec/wtvdec-c.vapi',
    './avisynth/avisynth-c.vapi',
    './dss/dss-c.vapi',
    './act/act-c.vapi',
    './astdec/astdec-c.vapi',
    './xa/xa-c.vapi',
    './flic/flic-c.vapi',
    './rtpdec_rfc4175/rtpdec_rfc4175-c.vapi',
    './sccenc/sccenc-c.vapi',
    './avidec/avidec-c.vapi',
    './wavdec/wavdec-c.vapi',
    './ircamdec/ircamdec-c.vapi',
    './flac_picture/flac_picture.vapi',
    './oggparsevp8/oggparsevp8-c.vapi',
    './dvenc/dvenc-c.vapi',
    './httpauth/httpauth.vapi',
    './xvag/xvag-c.vapi',
    './rtpdec_h263_rfc2190/rtpdec_h263_rfc2190-c.vapi',
    './afc/afc-c.vapi',
    './srtpproto/srtpproto-c.vapi',
    './sdr2/sdr2-c.vapi',
    './swfdec/swfdec-c.vapi',
    './wtv/wtv.vapi',
    './rtmpcrypt/rtmpcrypt-c.vapi',
    './rtmpcrypt/rtmpcrypt.vapi',
    './v210/v210-c.vapi',
    './url/url.vapi',
    './westwood_vqa/westwood_vqa-c.vapi',
    './wvdec/wvdec-c.vapi',
    './g722/g722-c.vapi',
    './idroqenc/idroqenc-c.vapi',
    './spdifdec/spdifdec-c.vapi',
    './g723_1/g723_1-c.vapi',
    './mvdec/mvdec-c.vapi',
    './adp/adp-c.vapi',
    './mpjpegdec/mpjpegdec-c.vapi',
    './bethsoftvid/bethsoftvid-c.vapi',
    './mms/mms.vapi',
    './electronicarts/electronicarts-c.vapi',
    './prompeg/prompeg-c.vapi',
    './rl2/rl2-c.vapi',
    './pvfdec/pvfdec-c.vapi',
    './webmdashenc/webmdashenc-c.vapi',
    './mmst/mmst-c.vapi',
    './lrc/lrc.vapi',
    './dsfdec/dsfdec-c.vapi',
    './oggparseflac/oggparseflac-c.vapi',
    './hlsproto/hlsproto-c.vapi',
    './spdif/spdif.vapi',
    './gifdec/gifdec-c.vapi',
    './rmsipr/rmsipr.vapi',
    './sdxdec/sdxdec-c.vapi',
    './ircam/ircam.vapi',
    './teeproto/teeproto-c.vapi',
    './movenccenc/movenccenc.vapi',
    './vorbiscomment/vorbiscomment.vapi',
    './img2enc/img2enc-c.vapi',
    './mmsh/mmsh-c.vapi',
    './apetag/apetag-c.vapi',
    './apetag/apetag.vapi',
    './unix/unix-c.vapi',
    './rtpdec_vc2hq/rtpdec_vc2hq-c.vapi',
    './mmf/mmf-c.vapi',
    './gxfenc/gxfenc-c.vapi',
    './anm/anm-c.vapi',
    './rtpdec_h264/rtpdec_h264-c.vapi',
    './rtspcodes/rtspcodes.vapi',
    './mov_chan/mov_chan.vapi',
    './jacosubenc/jacosubenc-c.vapi',
    './tls_securetransport/tls_securetransport-c.vapi',
    './rtpdec_h263/rtpdec_h263-c.vapi',
    './mpjpeg/mpjpeg-c.vapi',
    './adtsenc/adtsenc-c.vapi',
    './rtpenc_mpegts/rtpenc_mpegts-c.vapi',
    './voc/voc.vapi',
    './nutenc/nutenc-c.vapi',
    './rtpdec_svq3/rtpdec_svq3-c.vapi',
    './ivfdec/ivfdec-c.vapi',
    './rtmppkt/rtmppkt.vapi',
    './tls/tls.vapi',
    './dashenc/dashenc-c.vapi',
    './rmenc/rmenc-c.vapi',
    './tcp/tcp-c.vapi',
    './pcm/pcm.vapi',
    './assdec/assdec-c.vapi',
    './nspdec/nspdec-c.vapi',
    './cdg/cdg-c.vapi',
    './version/version.vapi',
    './oggparseskeleton/oggparseskeleton-c.vapi',
    './dxa/dxa-c.vapi',
    './options_table/options_table.vapi',
    './w64/w64.vapi',
    './dsicin/dsicin-c.vapi',
    './http/http.vapi',
    './http/http-c.vapi',
    './avc/avc.vapi',
    './ivfenc/ivfenc-c.vapi',
    './oggparsetheora/oggparsetheora-c.vapi',
    './dv/dv.vapi',
    './dv/dv-c.vapi',
    './mpc/mpc-c.vapi',
    './dashdec/dashdec-c.vapi',
    './tta/tta-c.vapi',
    './mlpdec/mlpdec-c.vapi',
    './rmdec/rmdec-c.vapi',
    './dcstr/dcstr-c.vapi',
    './assenc/assenc-c.vapi',
    './txd/txd-c.vapi',
    './subviewerdec/subviewerdec-c.vapi',
    './segafilmenc/segafilmenc-c.vapi',
    './jacosubdec/jacosubdec-c.vapi',
    './vqf/vqf-c.vapi',
    './codec2/codec2-c.vapi',
    './tiertexseq/tiertexseq-c.vapi',
    './a64/a64-c.vapi',
    './mpc8/mpc8-c.vapi',
    './rtpdec_formats/rtpdec_formats.vapi',
    './samidec/samidec-c.vapi',
    './takdec/takdec-c.vapi',
    './brstm/brstm-c.vapi',
    './rtpdec_vp9/rtpdec_vp9-c.vapi',
    './libopenmpt/libopenmpt-c.vapi',
    './nutdec/nutdec-c.vapi',
    './nullenc/nullenc-c.vapi',
    './jvdec/jvdec-c.vapi',
    './rtpdec_qcelp/rtpdec_qcelp-c.vapi',
    './c93/c93-c.vapi',
    './au/au-c.vapi',
    './aqtitledec/aqtitledec-c.vapi',
    './qtpalette/qtpalette.vapi',
    './img2/img2.vapi',
    './rtp/rtp.vapi',
    './rtpdec_mpa_robust/rtpdec_mpa_robust-c.vapi',
    './ast/ast-c.vapi',
    './ast/ast.vapi',
    './mm/mm-c.vapi',
    './idcin/idcin-c.vapi',
    './img2dec/img2dec-c.vapi',
    './oggparseogm/oggparseogm-c.vapi',
    './rtmp/rtmp.vapi',
    './avio/avio-c.vapi',
    './avio/avio.vapi',
    './asf/asf.vapi',
    './spdifenc/spdifenc-c.vapi',
    './idroqdec/idroqdec-c.vapi',
    './iv8/iv8-c.vapi',
    './mvi/mvi-c.vapi',
    './fifo/fifo-c.vapi',
    './rtpdec_vp8/rtpdec_vp8-c.vapi',
    './icecast/icecast-c.vapi',
    './dash/dash.vapi',
    './bfi/bfi-c.vapi',
    './rtmphttp/rtmphttp-c.vapi',
    './sctp/sctp-c.vapi',
    './serdec/serdec-c.vapi',
    './libssh/libssh-c.vapi',
    './data_uri/data_uri-c.vapi',
    './bmv/bmv-c.vapi',
    './id3v1/id3v1.vapi',
    './mp3enc/mp3enc-c.vapi',
    './mxg/mxg-c.vapi',
    './replaygain/replaygain.vapi',
    './rtpdec_g726/rtpdec_g726-c.vapi',
    './subtitles/subtitles.vapi',
    './rtpdec_qt/rtpdec_qt-c.vapi',
    './rpl/rpl-c.vapi',
    './r3d/r3d-c.vapi',
    './matroskadec/matroskadec-c.vapi',
    './rsd/rsd-c.vapi',
    './omadec/omadec-c.vapi',
    './fitsenc/fitsenc-c.vapi',
    './sauce/sauce.vapi',
    './bink/bink-c.vapi',
    './ttaenc/ttaenc-c.vapi',
    './filmstripenc/filmstripenc-c.vapi',
    './mxf/mxf.vapi',
    './mpl2dec/mpl2dec-c.vapi',
    './mxfenc/mxfenc-c.vapi',
    './ac3dec/ac3dec-c.vapi',
    './hlsplaylist/hlsplaylist.vapi',
    './apngenc/apngenc-c.vapi',
    './aviobuf/aviobuf-c.vapi',
    './gxf/gxf-c.vapi',
    './gxf/gxf.vapi',
    './flacdec/flacdec-c.vapi',
    './pcmenc/pcmenc-c.vapi',
    './vpcc/vpcc.vapi',
    './vpk/vpk-c.vapi',
    './ingenientdec/ingenientdec-c.vapi',
    './lxfdec/lxfdec-c.vapi',
    './mtv/mtv-c.vapi',
    './oggdec/oggdec-c.vapi',
    './oggdec/oggdec.vapi',
    './cafdec/cafdec-c.vapi',
    './mpsubdec/mpsubdec-c.vapi',
    './rawvideodec/rawvideodec-c.vapi',
    './hlsenc/hlsenc-c.vapi',
    './rawenc/rawenc-c.vapi',
    './rawenc/rawenc.vapi',
    './hnm/hnm-c.vapi',
    './ip/ip.vapi',
    './srtp/srtp.vapi',
    './rsodec/rsodec-c.vapi',
    './cafenc/cafenc-c.vapi',
    './gopher/gopher-c.vapi',
    './pjsdec/pjsdec-c.vapi',
    './matroska/matroska-c.vapi',
    './matroska/matroska.vapi',
    './oggenc/oggenc-c.vapi',
    './oggparsedirac/oggparsedirac-c.vapi',
    './rawdec/rawdec-c.vapi',
    './rawdec/rawdec.vapi',
    './paf/paf-c.vapi',
    './cdxl/cdxl-c.vapi',
    './vc1testenc/vc1testenc-c.vapi',
    './rtpdec_mpegts/rtpdec_mpegts-c.vapi',
    './libsmbclient/libsmbclient-c.vapi',
    './rdt/rdt-c.vapi',
    './rdt/rdt.vapi',
    './rtpdec_mpeg4/rtpdec_mpeg4-c.vapi',
    './rm/rm.vapi',
    './concatdec/concatdec-c.vapi',
    './swf/swf.vapi',
    './rsoenc/rsoenc-c.vapi',
    './img2_alias_pix/img2_alias_pix-c.vapi',
    './mxfdec/mxfdec-c.vapi',
    './metadata/metadata.vapi',
    './adxdec/adxdec-c.vapi',
    './ilbc/ilbc-c.vapi',
    './apngdec/apngdec-c.vapi',
    './vc1test/vc1test-c.vapi',
    './aptxdec/aptxdec-c.vapi',
    './flacenc/flacenc-c.vapi',
    './flacenc/flacenc.vapi',
    './webpenc/webpenc-c.vapi',
    './rtpdec_mpeg12/rtpdec_mpeg12-c.vapi',
    './pcmdec/pcmdec-c.vapi',
    './rtpdec_amr/rtpdec_amr-c.vapi',
    './avio_internal/avio_internal.vapi',
    './mpegenc/mpegenc-c.vapi',
    './rtmpdh/rtmpdh.vapi',
    './matroskaenc/matroskaenc-c.vapi',
    './tls_schannel/tls_schannel-c.vapi',
    './omaenc/omaenc-c.vapi',
    './fitsdec/fitsdec-c.vapi',
    './genh/genh-c.vapi',
    './rtpdec_xiph/rtpdec_xiph-c.vapi',
    './rtpdec_hevc/rtpdec_hevc-c.vapi',
    './tls_mbedtls/tls_mbedtls-c.vapi',
    './tmv/tmv-c.vapi',
    './filmstripdec/filmstripdec-c.vapi',
    './aea/aea-c.vapi',
    './boadec/boadec-c.vapi',
    './acm/acm-c.vapi',
    './vivo/vivo-c.vapi',
    './nut/nut.vapi',
    './gif/gif-c.vapi',
    './crcenc/crcenc-c.vapi',
    './mov/mov-c.vapi',
    './ifv/ifv-c.vapi',
    './mp3dec/mp3dec-c.vapi',
    './isom/isom.vapi',
    './sdsdec/sdsdec-c.vapi'
])