
srcs += files ([
    './ResampleContext.vapi',
    './AudioMix.vapi',
    './ChannelMapInfo.vapi',
    './AudioMixCoeffType.vapi',
    './ResampleFilterType.vapi',
    './DitherContext.vapi',
    './RemapPoint.vapi',
    './AudioConvert.vapi',
    './AudioData.vapi',
    './AudioResampleContext.vapi',
    './ResampleDitherMethod.vapi',
    './DitherDSPContext.vapi'
])
